--- a/src/listentogithub/views/layout.jade
+++ b/src/listentogithub/views/layout.jade
@@ -3,4 +3,7 @@ html
   head
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    script(src='/socket.io/socket.io.js')
+    script.
+        var socket = io();
     block content
