--- a/src/listentogithub/views/layout.jade
+++ b/src/listentogithub/views/layout.jade
@@ -2,8 +2,6 @@ doctype html
 html
   head
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='/javascripts/main.js')
   body
-    script(src='/socket.io/socket.io.js')
-    script.
-        var socket = io();
     block content
