--- a/src/listentogithub/public/stylesheets/style.css
+++ b/src/listentogithub/public/stylesheets/style.css
@@ -1,8 +1,23 @@
-body {
-  padding: 50px;
+html, body {
+  height: 100%;
+  border: 0;
+  padding: 0;
+  margin: 0;
+  background-color: #f2f2f2;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+#header {
+    background-color: #f2f2f2;
+    height: 50px;
 }
+
+#content {
+    background-color: #0b1426;
+}
+
+#the-svg {
+    fill: #0b1426;
+    height: 100%;
+}
+
