--- a/src/listentogithub/views/index.jade
+++ b/src/listentogithub/views/index.jade
@@ -1,6 +1,8 @@
 extends layout
 
+block header
+  div#header
+    h1 Listen to Github
 block content
-  h1= title
-  p Welcome to #{title}
-  svg#the-svg
+  div#content
+    svg#the-svg
