--- a/src/listentogithub/views/layout.jade
+++ b/src/listentogithub/views/layout.jade
@@ -4,4 +4,5 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/javascripts/main.js')
   body
+    block header
     block content
